src/test/fail/return_type_mismatch.j
class Main {
    Void main() {
        return;
    }
}

class A {
    Int a() {
        return;
    }
}
